--- a/americanSignLanguage/webTemplates/aboutus.html
+++ b/americanSignLanguage/webTemplates/aboutus.html
@@ -70,32 +70,38 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>About Us</h2>
+                    <h2>About HyperTalk</h2>
                 </div>
 
                 <div class="row content">
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
                         <p>
-                            Welcome to our website! We are a team of passionate individuals dedicated to
-                                                        making communication more accessible for everyone. Our mission is to break down
-                                                        barriers and empower people to connect with each other, regardless of their 
-                                                        background or abilities.
+                            HyperTalk uses a machine learning
+                            algorithm code to define and trains
+                            a convolutional neural network
+                            model for ASL detection using
+                            Keras, faster than existing tools,
+                            making it an innovative and unique
+                            solution. The website's and mobile app's architecture is
+                            designed to be user-friendly, with
+                            a simple and intuitive interface
+                            that is easy to use and navigate.
                         </p>
 
                         <p>
-                            Our team brings together experts in technology, design, and accessibility to create
-                                                        innovative solutions that make a real difference in people's lives. We are committed
-                                                        to pushing the boundaries of what's possible and to continuously improving our products
-                                                        and services.
+                            The website and app will support real-time translation, allowing users to communicate with
+                            hearing individuals in the real-time and bidirectional ways with simulations for the
+                            patient.
+
                         </p>
                     </div>
 
                     <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
                         <p>
-                            Whether you are a business looking to improve accessibility for your customers, 
-                                                        a student looking to learn more about sign language, or simply someone who is 
-                                                        passionate about creating a more inclusive world, we are here to help. Thank you 
-                                                        for visiting our site, and we look forward to working with you!
+                            Our team brings together experts in technology, design, and accessibility to create
+                            innovative solutions that make a real difference in people's lives. We are committed
+                            to pushing the boundaries of what's possible and to continuously improving our products
+                            and services.
                         </p>
                         <a href="#" class="btn-learn-more">Learn More</a>
                     </div>
