--- a/americanSignLanguage/webTemplates/team.html
+++ b/americanSignLanguage/webTemplates/team.html
@@ -72,7 +72,7 @@
                             <div class="member-img">
                                 <img src="{%static 'assets/myimages/member1.jpg' %}" class="img-fluid member-img" alt="">
                                 <div class="social">
-                                    <a href="">
+                                    <a href="https://twitter.com/HasithaGallella">
                                         <i class="bi bi-twitter"></i>
                                     </a>
                                     <a href="">
@@ -81,7 +81,7 @@
                                     <a href="">
                                         <i class="bi bi-instagram"></i>
                                     </a>
-                                    <a href="">
+                                    <a href="https://linkedin.com/in/hasitha-gallella-672187242">
                                         <i class="bi bi-linkedin"></i>
                                     </a>
                                 </div>
@@ -109,7 +109,7 @@
                                     <a href="">
                                         <i class="bi bi-instagram"></i>
                                     </a>
-                                    <a href="">
+                                    <a href="https://linkedin.com/in/kavindu-damsith-86696722a">
                                         <i class="bi bi-linkedin"></i>
                                     </a>
                                 </div>
@@ -137,7 +137,7 @@
                                     <a href="">
                                         <i class="bi bi-instagram"></i>
                                     </a>
-                                    <a href="">
+                                    <a href="https://linkedin.com/in/malitha-prabhashana-808133224">
                                         <i class="bi bi-linkedin"></i>
                                     </a>
                                 </div>
