--- a/americanSignLanguage/webTemplates/index_final.html
+++ b/americanSignLanguage/webTemplates/index_final.html
@@ -96,8 +96,8 @@
                         <div
                             data-aos="fade-up" data-aos-delay="800">
                             <!-- Button trigger modal -->
-                            <div>
-                                <a href="#" class="btn-get-started scrollto btn btn-primary me-3" data-bs-toggle="modal" data-bs-target="#sign-language-modal">Sign language to Speech</a>
+                            <div class="main-btns">
+                                <a href="#" class="btn-get-started scrollto btn btn-primary" data-bs-toggle="modal" data-bs-target="#sign-language-modal">Sign language to Speech</a>
                                 <a href="#" class="btn-services scrollto btn" data-bs-toggle="modal" data-bs-target="#text-to-sign-language-modal">Speech to Sign language</a>
                             </div>
                         </div>
@@ -124,13 +124,13 @@
                         <section class="section coming-soon" data-section="section2">
                             <div class="px-5">
                                 <div class="row">
-                                    <div class="col-md-12 col-xs-12">
+                                    <div class="col-md-12 col-xs-12 video-cam">
                                         <style>
                                             .displayHide {
                                                 display: none;
                                             }
                                         </style>
-                                        <video id="video" width="640" autoplay class="displayHide"></video>
+                                        <video id="video" width="800" autoplay class="displayHide"></video>
                                         <canvas id="canvas" width="640" height="480" class="displayHide"></canvas>
 
                                         <img
