--- a/americanSignLanguage/webTemplates/team.html
+++ b/americanSignLanguage/webTemplates/team.html
@@ -12,7 +12,8 @@
         <link href="{%static 'assets_final/css/style.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/css/custom.css' %}" rel="stylesheet">
-    
+        <script src="{%static 'assets/js/custom.js' %}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>    
     </head>
 
 
