--- a/americanSignLanguage/webTemplates/aboutus.html
+++ b/americanSignLanguage/webTemplates/aboutus.html
@@ -12,6 +12,8 @@
         <link href="{%static 'assets_final/css/style.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
         <link href="{%static 'assets_final/css/custom.css' %}" rel="stylesheet">
+        <script src="{%static 'assets/js/custom.js' %}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
 
         <style>
@@ -70,7 +72,7 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-up">
-                    <h2>About HyperTalk</h2>
+                    <h2>About</h2>
                 </div>
 
                 <div class="row content">
