--- a/3dodel/blendertothree-main/src/index.html
+++ b/3dodel/blendertothree-main/src/index.html
@@ -12,6 +12,9 @@
     </style>
 </head>
 <body>
+    <div id="myDiv">
+
+    </div>
     <script src="./js/scripts.js" type="module"></script>
 </body>
 </html>
